--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -3,3 +3,4 @@
 
 <app-counter-buttons></app-counter-buttons>
 <app-counter-output></app-counter-output>
+<app-custom-increment-counter></app-custom-increment-counter>
