Using CreateFeatureSelector and createSelector for getting the store data

--- a/src/app/custom-increment-counter/custom-increment-counter.component.html
+++ b/src/app/custom-increment-counter/custom-increment-counter.component.html
@@ -1,2 +1,4 @@
+<div>Channel Name : {{channelName$|async}}</div>
 <input type="text" placeholder="enter counter value here.." [(ngModel)]="value">
 <button (click)="addCounter()">Add counter</button>
+<button (click)="updateChannelName()">Update Channel Name</button>
