--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,2 +1,2 @@
-<!-- <p>Counter : {{counter}}</p> -->
-<p>Counter : {{(counter$|async)?.counter}}</p>
+<p>Counter : {{counter$|async}}</p>
+<!-- <p>Counter : {{(counter$|async)?.counter}}</p> -->
