--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,15 +1,23 @@
-<div class="container">
-<h3>Posts List</h3>
-<table class="table">
-    <tr>
-        <th>ID</th>
-        <th>Title</th>
-        <th>Description</th>
-    </tr>
-    <tr *ngFor="let post of (postsList$|async)">
-        <td>{{post.id}}</td>
-        <td>{{post.title}}</td>
-        <td>{{post.description}}</td>
-    </tr>
-</table>
+<div class="container my-2">
+    <div class="row">
+        <div class="col-8">
+            <h3 class="text-center">Post List</h3>
+            <table class="table my-2">
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Description</th>
+                </tr>
+                <tr *ngFor="let post of (postsList$|async)">
+                    <td>{{post.id}}</td>
+                    <td>{{post.title}}</td>
+                    <td>{{post.description}}</td>
+                </tr>
+            </table>
+             <button class="btn btn-primary" routerLink="add-post">Add Post</button>
+        </div>
+        <div class="col-4">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
