--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -7,11 +7,13 @@
                     <th>ID</th>
                     <th>Title</th>
                     <th>Description</th>
+                    <th>Action</th>
                 </tr>
                 <tr *ngFor="let post of (postsList$|async)">
                     <td>{{post.id}}</td>
                     <td>{{post.title}}</td>
                     <td>{{post.description}}</td>
+                    <td><a [routerLink]="['edit-post',post.id]" class="btn btn-primary">Edit</a></td>
                 </tr>
             </table>
              <button class="btn btn-primary" routerLink="add-post">Add Post</button>
